--- a/app/src/main/res/layout/activity_detallado.xml
+++ b/app/src/main/res/layout/activity_detallado.xml
@@ -9,11 +9,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.ygb.turismotepic.DetalladoActivity">
+
     <ImageView
         android:id="@+id/iv1"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:src="@mipmap/museo"
+        android:src="@drawable/fray"
+        android:scaleType="fitCenter"
+        android:cropToPadding="true"
+        android:background="#000"
         android:layout_marginTop="-30dp"
         android:layout_below="@+id/rl1"
        />
@@ -49,39 +53,83 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_below="@id/iv1"
-        android:background="#55F"
-        >
 
-        <TextView
+        >
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:textSize="17dp"
-            android:textColor="#F29100"
-            android:textStyle="bold"
-            android:text="Mágico edificio del antigo oeste ubicado en tepic a la altura de frente a fabricas"
-            />
-        <TextView
-            android:id="@+id/costo"
+            android:layout_height="wrap_content"
+            android:id="@+id/sv1">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="match_parent">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:textSize="17dp"
+                android:textColor="#F29100"
+                android:textStyle="bold"
+                android:text="Lugar"
+                android:id="@+id/lugar"
+                />
+            <TextView
+                android:id="@+id/posicion"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:gravity="center"
+                android:textSize="13dp"
+                android:textColor="#000"
+                android:text="(21.5107362,-104.8920432)"
+                />
+            <TextView
+                android:id="@+id/horario"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="13dp"
+                android:textColor="#000"
+                android:text="Horario: Domingo 10:00 - 14:00 Martes a sábado 10:00 - 14:00 / 16:00 - 19:00 horas"
+                />
+            <TextView
+                android:id="@+id/costo"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:gravity="center"
+                android:textSize="13dp"
+                android:textColor="#000"
+                android:text="Costo: Entrada libre"
+                />
+
+            <com.example.ygb.turismotepic.JustifyTextView
+                android:id="@+id/descripcion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="20dp"
+                android:textSize="13dp"
+                android:textColor="#000"
+                android:text="En el centro de la ciudad de Tepic, precisamente frente a la plaza principal, se localiza la hermosa Catedral de Tepic, un templo católico correspondiente a la diócesis de la zona.Considerada como la Iglesia Madre preside las celebraciones litúrgicas, brinda justicia y ofrece los Sacramentos al rebaño encomendado.
+    "
+                />
+            </LinearLayout>
+        </ScrollView>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:textSize="17dp"
-            android:textColor="#F29100"
-            android:textStyle="bold"
-            android:text="Costo: Entrada libre"
-            />
+            android:gravity="bottom|center_horizontal"
+            android:layout_height="match_parent">
+            <ImageButton
+                android:id="@+id/bruta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:src="@mipmap/ubicacion"
+                android:background="@android:color/transparent"
+                />
+
+        </LinearLayout>
 
     </LinearLayout>
-    <TextView
-        android:id="@+id/idPlace"
-        android:layout_below="@id/iv1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="85dp"
-        android:textColor="#FFF"
-        android:textStyle="bold"
-        android:text="sdsa"
-        />
+
 </RelativeLayout>
