--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,6 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:actionMenuTextColor">@android:color/white</item>
         <item name="android:textColor">@android:color/white</item>
-
     </style>
 
 
@@ -37,6 +36,14 @@
         <item name="colorControlNormal">#ea5b0c</item>
         <item name="colorControlActivated">#ea5b0c</item>
     </style>
+    <style name="AppTheme.Fullscreen" parent="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
+        <item name="android:colorAccent">#F82</item>
+    </style>
+    <style name="StarRatingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/cratingb_full</item>
+        <item name="android:minHeight">30dip</item>
+        <item name="android:maxHeight">30dip</item>
 
+        </style>
 
 </resources>
